--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,15 @@
     <!-- Заголовок -->
     <TextView
         android:id="@+id/textView_title"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/title_size"
         android:layout_height="wrap_content"
-        android:text="Авторизация"
+        android:text="@string/authorization"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginTop="32dp"
+        android:gravity="center"/>
 
     <!-- Поле ввода email -->
     <EditText
