--- a/app/src/main/res/layout/relative_layout.xml
+++ b/app/src/main/res/layout/relative_layout.xml
@@ -11,7 +11,8 @@
         android:layout_height="96dp"
         android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/beer_icon" />
+        android:src="@drawable/beer"
+        />
 
     <TextView
         android:id="@+id/item_title"
@@ -19,20 +20,23 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/item_image"
         android:layout_marginStart="16dp"
-        android:text="Item Title"
+        android:text="@string/item_title"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/beer_dark"/>
 
-    <TextView
+    <EditText
         android:id="@+id/item_description"
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_title"
-        android:layout_toEndOf="@id/item_image"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="4dp"
-        android:text="Item Description"
-        android:textSize="14sp" />
+        android:layout_toEndOf="@id/item_image"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:text="@string/item_amount"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/item_button"
