--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="brown">#d2883c</color>
     <color name="dark_brown">#662516</color>
+    <color name="beer_brown">#8B4513</color>
+    <color name="beer_gold">#FFD700</color>
+    <color name="beer_dark">#191919</color>
 </resources>
