Applied resources to activities

--- a/app/src/main/res/layout/relative_layout.xml
+++ b/app/src/main/res/layout/relative_layout.xml
@@ -35,7 +35,7 @@
         android:layout_toEndOf="@id/item_image"
         android:inputType="numberDecimal"
         android:minHeight="48dp"
-        android:text="@string/item_amount"
+        android:hint="@string/item_amount"
         android:textSize="18sp" />
 
     <Button
