--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/beer_dark"/>
 
     <!-- Поле ввода email -->
     <EditText
@@ -68,7 +69,8 @@
         app:layout_constraintTop_toBottomOf="@id/button_login"
         app:layout_constraintStart_toStartOf="@id/button_login"
         app:layout_constraintEnd_toEndOf="@id/button_login"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:textColor="@color/beer_gold"/>
 
     <ImageView
         android:id="@+id/imageView3"
