--- a/app/src/main/res/layout/llner_layout.xml
+++ b/app/src/main/res/layout/llner_layout.xml
@@ -9,7 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Введите название товара" />
+        android:text="@string/name"
+        android:textColor="@color/beer_gold"
+        android:textSize="30sp"/>
 
     <ImageView
         android:layout_width="match_parent"
@@ -20,7 +22,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/beer_price" />
+        android:text="@string/beer_price"
+        android:textSize="20sp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -30,9 +33,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Комментарий к заказу:"
+        android:text="@string/comment_to_the_order"
         android:layout_marginTop="16dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <EditText
         android:id="@+id/commentEditText"
