--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,6 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Пароль"
         android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@id/editText_email"
@@ -73,7 +71,7 @@
         android:textColor="@color/beer_gold"/>
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/dr_livsy"
         android:layout_width="366dp"
         android:layout_height="274dp"
         android:layout_marginStart="8dp"
